Refactor sonarcube/lint